--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,11 @@
     "typescript": "^5.5.3",
     "vite": "^5.0.8",
     "vite-plugin-singlefile": "^0.13.5",
-    "vite-plugin-static-copy": "^1.0.6"
+    "vite-plugin-static-copy": "^1.0.6",
+    "idb": "^8.0.2"
   },
   "dependencies": {
     "@myriaddreamin/typst-ts-renderer": "^0.5.0-rc6",
-    "@myriaddreamin/typst.ts": "^0.5.0-rc6"
+    "@myriaddreamin/typst.ts": "^0.5.0-rc6",
   }
 }
