--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "private": true,
   "contributors": [
     "Myriad Dreamin <camiyoru@gmail.com>",
-    "dark-flames <github@dark-flames.dev>"
-  ],
-  "workspaces": [
-    "frontend"
+    "dark-flames <github@dark-flames.dev>",
+    "purofle <purofle@gmail.com>"
   ],
   "scripts": {
     "reset": "rm -rf static/typst && cd frontend && npm run reset",
-    "build:fe": "yarn workspace blog-frontend build:prod",
+    "build:fe": "pnpm --filter blog-frontend run build:prod",
     "build:typ": "node scripts/build-posts.js",
     "serve": "zola serve"
   },
