--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,7 @@ theme = "apollo"
 
 taxonomies = [{ name = "tags", feed = true }]
 
+title = "日落果的 Blog"
 
 [markdown]
 # Whether to do syntax highlighting
@@ -19,14 +20,15 @@ highlight_code = true
 
 [extra]
 menu = [
-  { name = "/posts", url = "/posts", weight = 1 },
-  { name = "/tags", url = "/tags", weight = 2 },
-  { name = "/about", url = "/about", weight = 3 },
+  { name = "/home", url = "/", weight = 1 },
+  { name = "/posts", url = "/posts", weight = 2 },
+  { name = "/tags", url = "/tags", weight = 3 },
+  { name = "/about", url = "/about", weight = 4 },
 ]
 
 socials = [
-  { name = "twitter", url = "https://twitter.com/Darkf1ames", icon = "twitter" },
-  { name = "github", url = "https://github.com/dark-flames", icon = "github" },
+  { name = "twitter", url = "https://twitter.com/purofle", icon = "twitter" },
+  { name = "github", url = "https://github.com/github", icon = "github" },
 ]
 
 insert_anchor_links = "heading"
