--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,6 @@
   },
   "dependencies": {
     "@myriaddreamin/typst-ts-renderer": "^0.5.0-rc6",
-    "@myriaddreamin/typst.ts": "^0.5.0-rc6",
+    "@myriaddreamin/typst.ts": "^0.5.0-rc6"
   }
 }
