--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "idb": "^8.0.2"
   },
   "dependencies": {
-    "@myriaddreamin/typst-ts-renderer": "^0.5.0-rc6",
-    "@myriaddreamin/typst.ts": "^0.5.0-rc6"
+    "@myriaddreamin/typst-ts-renderer": "^0.6.0",
+    "@myriaddreamin/typst.ts": "^0.6.0"
   }
 }
