--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@myriaddreamin/typst-ts-node-compiler": "^0.5.0-rc6",
+    "@myriaddreamin/typst-ts-node-compiler": "^0.6.0",
     "toml": "^3.0.0"
   }
 }
